src/objects/Customer_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Handset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CalendarSameAsAccount__c</fullName>
        <description>Is Public Calendar same as related Account&apos;s Public Calendar?</description>
        <formula>TEXT(PublicCalendar__c) == TEXT(Account__r.PublicCalendar__c)</formula>
        <label>CalendarSameAsAccount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Attendees_and_Titles__c</fullName>
        <description>used by enterprise sales team</description>
        <label>Customer Attendees and Titles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate_d__c</fullName>
        <description>The field has has _d in the name to denote the fact that it is only the date portion of the DateTime object Meeting_End_Date</description>
        <label>Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>This field serves as a &quot;short&quot; summary of the post meeting comments</description>
        <inlineHelpText>A &quot;short&quot; summary of the post meeting comments.</inlineHelpText>
        <label>Executive Summary</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Attendees__c</fullName>
        <label>External Attendees and Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Post_Meeting_Notes_Entry_Date__c</fullName>
        <inlineHelpText>The date on which the first post meeting notes was entered.</inlineHelpText>
        <label>First Post Meeting Notes Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Attendees__c</fullName>
        <label>Internal Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Meetings_Pending__c</fullName>
        <description>for use in enterprise sales</description>
        <inlineHelpText>Upcoming Meeting details including: Meeting date, external attendees and title, main topic of meeting.</inlineHelpText>
        <label>Key Meetings Pending</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Date__c</fullName>
        <label>Meeting End Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date__c</fullName>
        <label>Meeting Start Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Companion Product Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOR Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Supplier Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QBR Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech. Sales Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Num_of_days_since_the_meeting_start_date__c</fullName>
        <formula>NOW()  -  Meeting_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the start of this customer meetings.</inlineHelpText>
        <label>Num of days since the meeting start date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original creator of the Meeting if created through Gmail</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retail_Playbook__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Playbook__c</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Meeting_Notes_Text_Length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Post Meeting Notes Text Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Meeting_Notes__c</fullName>
        <label>Post Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority_Scope__c</fullName>
        <label>Priority Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PublicCalendar__c</fullName>
        <label>Public Calendar</label>
        <picklist>
            <picklistValues>
                <fullName>All Lenovo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES - Consumer Electronics Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Products (CP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA ATT/TMO/Sprint/RONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA VZW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sales (NA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sales (Non NA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWC - Mobile World Congress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranging_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ranging Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Project_Ranging__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Ranging__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate_d__c</fullName>
        <description>The field has has _d in the name to denote the fact that it is only the date portion of the DateTime object Meeting_Start_Date</description>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All_Meeting</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Location__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>StartDate_d__c</columns>
        <columns>EndDate_d__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Meetings</label>
    </listViews>
    <listViews>
        <fullName>CES_Meetings</fullName>
        <columns>NAME</columns>
        <columns>PublicCalendar__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PublicCalendar__c</field>
            <operation>equals</operation>
            <value>CES - Consumer Electronics Show</value>
        </filters>
        <label>CES Meetings</label>
    </listViews>
    <listViews>
        <fullName>CTIA_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>StartDate_d__c</columns>
        <columns>Post_Meeting_Notes__c</columns>
        <columns>Has_Attachments__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PublicCalendar__c</field>
            <operation>equals</operation>
            <value>CTIA</value>
        </filters>
        <label>CTIA Meetings</label>
    </listViews>
    <listViews>
        <fullName>Meetings_with_wrong_calendar</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PublicCalendar__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CalendarSameAsAccount__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PublicCalendar__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Meetings with wrong calendar</label>
    </listViews>
    <listViews>
        <fullName>My_Meetings</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Location__c</columns>
        <columns>StartDate_d__c</columns>
        <columns>EndDate_d__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Meetings</label>
    </listViews>
    <listViews>
        <fullName>New_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Location__c</columns>
        <columns>StartDate_d__c</columns>
        <columns>EndDate_d__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <nameField>
        <label>Meeting Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <recordTypes>
        <fullName>GTM</fullName>
        <active>true</active>
        <description>Default GTM record type</description>
        <label>GTM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procurement</fullName>
        <active>true</active>
        <label>Procurement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_date_cannot_be_lower_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Meeting_Start_Date__c &gt; Meeting_End_Date__c</errorConditionFormula>
        <errorDisplayField>Meeting_End_Date__c</errorDisplayField>
        <errorMessage>The meeting end date and time must occur after the start date and time</errorMessage>
    </validationRules>
</CustomObject>